@@ -95,7 +95,6 @@ BOLD_MSG([checks for functions and declarations])
 dnl
 AC_FUNC_ALLOCA dnl set variable ALLOCA, DEFS NO_ALLOCA
 CL_SETJMP      dnl DEFS HAVE__JMP, LONGJMP_RETURNS
-CL_TYPE_SIGNAL dnl DEFS RETSIGTYPE, SIGTYPE_DOTS
 CL_SIGNAL_REINSTALL dnl DEFS SIGNAL_NEED_REINSTALL
 CL_SIGNAL_UNBLOCK   dnl DEFS SIGNAL_NEED_UNBLOCK
 CL_SIGNAL_BLOCK_OTHERS dnl DEFS SIGNAL_NEED_UNBLOCK_OTHERS
